--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -22,6 +22,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('create')}}">New Entry</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('requests')}}">Requests</a>
+              </li>
             </ul>
         </div>
     </nav>
